# slipstream

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  LOCAL_MODELS_SPEC.md  README.md  SPEC.md  USER_JOURNEY.md  WORKOUT_MODES_SPEC.md  pyproject.toml
dashboard/: design-philosophy.md  generate-states-diagram.py  mock-server-demo.js  mock-server.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
dashboard/src/: App.tsx  index.css
diagrams/: dashboard_options.md  local_models_flow.md
scripts/: install_services.sh
services/: slipstream-stt.service
src/: __init__.py
src/mcp/: __init__.py  server.py  state_store.py  websocket_server.py
src/notifications/: __init__.py  formatter.py  manager.py  telegram.py
src/stt/: __init__.py  __main__.py  log_manager.py  stt_service.py
src/vision/: __init__.py  keypoint_buffer.py  pipeline.py  pose_estimator.py  protocols.py  rate_calculator.py  state_store.py  stroke_detector.py  video_capture.py
tests/: __init__.py  conftest.py
tests/mcp/: conftest.py  test_config.py  test_integration.py  test_metric_bridge.py  test_models.py  test_server.py  test_session_storage.py  test_session_tools.py  test_state_store.py  test_state_sync.py  test_swim_tools.py  test_swim_tools_integration.py  test_websocket_server.py
tests/notifications/: conftest.py  test_formatter.py  test_integration.py  test_manager.py  test_telegram.py
tests/stt/: __init__.py  conftest.py  test_integration.py  test_log_manager.py  (+1 more)
thoughts/: index.md  project-structure.md
verification/: __init__.py  __main__.py  e2e_harness.py
(+107 files in other folders)
