[project]
name = "slipstream"
version = "0.1.0"
description = "Local AI swim coach for endless pools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "mcp>=1.25.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
]
